force-app/main/default/objects/SharePoint_Details__mdt/SharePoint_Details__mdt.object-meta.xml
<CustomObject>
    <label>SharePoint Details</label>
    <pluralLabel>SharePoint Details</pluralLabel>
</CustomObject>