force-app/main/default/objects/SharePoint_Details__mdt/fields/EndPoint_Url__c.field-meta.xml
<CustomField>
    <fullName>EndPoint_Url__c</fullName>
    <label>EndPoint Url</label>
    <type>Url</type>
</CustomField>