force-app/main/default/objects/SharePoint_Details__mdt/fields/Parent_Folder__c.field-meta.xml
<CustomField>
    <fullName>Parent_Folder__c</fullName>
    <label>Parent Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>