force-app/main/default/objects/SharePoint_Details__mdt/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <label>Site ID</label>
    <type>TextArea</type>
</CustomField>