force-app/main/default/objects/SharePoint_Details__mdt/fields/Tenant_Id__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Id__c</fullName>
    <label>Tenant Id</label>
    <type>TextArea</type>
</CustomField>